--- a/package.json
+++ b/package.json
@@ -5,19 +5,25 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
+    "dev:server": "nodemon server.js",
     "build": "vite build",
     "lint": "eslint .",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "start": "node server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^5.1.0",
     "i18next": "^25.4.1",
     "i18next-browser-languagedetector": "^8.2.0",
     "loaders.css": "^0.1.2",
+    "node-fetch": "^3.3.2",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-i18next": "^15.7.2",
     "react-loaders": "^3.0.1",
-    "react-router": "^7.8.2"
+    "react-router": "^7.8.2",
+    "react-toastify": "^11.0.5"
   },
   "devDependencies": {
     "@eslint/js": "^9.33.0",
