--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "start": "node server.js"
   },
   "dependencies": {
+    "aos": "^2.3.4",
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "i18next": "^25.4.1",
